--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.MainActivity">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/aaa" />
+
+        <activity
+            android:name=".main.MainActivity"
+            android:windowSoftInputMode="adjustPan"> <!-- 使得打字时窗口大小不变 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
