--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.NewsActivity"></activity>
+        <activity android:name=".main.NewsDetailActivity"></activity>
+        <activity android:name=".main.NewsActivity" />
 
         <meta-data
             android:name="com.google.android.actions"
