--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        // maven库
+        def cn = "http://maven.aliyun.com/nexus/content/groups/public/"
+        def abroad = "http://central.maven.org/maven2/"
+        // 先从url中下载jar若没有找到，则在artifactUrls中寻找
+        maven {
+            url cn
+            artifactUrls abroad
+
+        }
+
+        maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter"}
+        maven { url 'https://github.com/WickeDev/stetho-realm/raw/master/maven-repo' }
+
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        
+        classpath "io.realm:realm-gradle-plugin:5.10.0"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,12 +30,17 @@ buildscript {
 
 allprojects {
     repositories {
+        // maven库
+        def cn = "http://maven.aliyun.com/nexus/content/groups/public/"
+        def abroad = "http://central.maven.org/maven2/"
+        // 先从url中下载jar若没有找到，则在arfactUrls中寻找
+        maven {
+            url cn
+            artifactUrls abroad
+        }
+        maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter"}
+        maven { url 'https://github.com/WickeDev/stetho-realm/raw/master/maven-repo' }
         google()
         jcenter()
-        
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
