调整了包的位置

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.FavoriteActivity"></activity>
-        <activity android:name=".main.NewsDetailActivity" />
-        <activity android:name=".main.NewsActivity"
+        <activity android:name=".news.newsList.FavoriteActivity"></activity>
+        <activity android:name=".news.newsDetail.NewsDetailActivity" />
+        <activity android:name=".news.newsList.NewsActivity"
             android:windowSoftInputMode="adjustPan"> <!-- 使得打字时窗口大小不变 -->
         </activity>
 
