--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+//noinspection GradleCompatible
+//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
 android {
@@ -42,6 +44,16 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     implementation 'com.uphyca:stetho_realm:2.3.0'
+
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    implementation 'com.android.support:support-v4:28.0.0'
+//    implementation 'com.android.support:swiperefreshlayout-v4:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:3.5.2'
 //
 //    implementation 'com.github.bumptech.glide:glide:4.5.0'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
