--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 
         maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter"}
         maven { url 'https://github.com/WickeDev/stetho-realm/raw/master/maven-repo' }
+//        maven { url "https://jitpack.io" }
 
         google()
         jcenter()
@@ -25,6 +26,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "io.realm:realm-gradle-plugin:5.10.0"
+//        compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -43,6 +45,7 @@ allprojects {
         }
         maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter"}
         maven { url 'https://github.com/WickeDev/stetho-realm/raw/master/maven-repo' }
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
         mavenCentral()
