--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".news.newsList.ClassActivity"></activity>
-        <activity android:name=".main.SettingActivity" />
-        <activity android:name=".news.newsList.FavoriteActivity" />
+        <activity android:name=".settings.SettingActivity" />
+        <activity android:name=".favorites.FavorActivity" />
         <activity android:name=".news.newsDetail.NewsDetailActivity" />
         <activity
             android:name=".news.newsList.NewsActivity"
