--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,45 @@ android {
         }
     }
 }
+
+apply plugin: 'com.mob.sdk'
+MobSDK {
+    appKey "2c4fd6bc908e0"
+    appSecret "5e89dca9e3a1e7126144418fdf35be34"
+    ShareSDK {
+        loopShare true
+        devInfo {
+            SinaWeibo {
+                appKey "2766546938"
+                appSecret "b431be5fec741a6e536df3436e46481a"
+                callbackUri "http://www.sharesdk.cn"
+            }
+//            QQ {
+//                appId "100371282"
+//                appKey "aed9b0303e3ed1e27bae87c33761161d"
+//            }
+//            ShortMessage {}
+//            Wechat {
+//                appId "wx4868b35061f87885"
+//                appSecret "64020361b8ec4c99936c0e3999a9f249"
+//                userName "gh_afb25ac019c9"
+//                path "pages/index/index.html?id=1"
+//                withShareTicket true
+//                miniprogramType 2
+//            }
+//            Email {}
+//            WechatMoments {
+//                appId "wx4868b35061f87885"
+//                appSecret "64020361b8ec4c99936c0e3999a9f249"
+//            }
+//            WechatFavorite {
+//                appId "wx4868b35061f87885"
+//                appSecret "64020361b8ec4c99936c0e3999a9f249"
+//            }
+        }
+    }
+}
+
 apply plugin: 'realm-android'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -49,7 +88,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     implementation 'com.android.support:support-v4:28.0.0'
-//    implementation 'com.android.support:swiperefreshlayout-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
