--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "io.realm:realm-gradle-plugin:5.10.0"
+        classpath "com.mob.sdk:MobSDK:2018.0319.1724"
 //        compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
 
         // NOTE: Do not place your application dependencies here; they belong
