--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".news.newsList.ClassActivity"></activity>
+        <activity android:name=".myitems.TouTiaoTwoActivity"></activity>
+        <activity android:name=".news.newsList.ClassActivity" />
         <activity android:name=".settings.SettingActivity" />
         <activity android:name=".favorites.FavorActivity" />
         <activity android:name=".news.newsDetail.NewsDetailActivity" />
