--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -92,7 +96,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
     implementation 'com.github.bumptech.glide:glide:3.5.2'
-//
-//    implementation 'com.github.bumptech.glide:glide:4.5.0'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    implementation 'cn.jzvd:jiaozivideoplayer:7.0.5'
 }
