--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,11 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:3.5.2'
     implementation 'cn.jzvd:jiaozivideoplayer:7.0.5'
+
+    implementation 'com.wenwenwen888:searchbox:1.0.1'
+
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 }
