--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".myitems.TouTiaoTwoActivity"></activity>
+        <activity android:name=".loading.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".myitems.TouTiaoTwoActivity" />
         <activity android:name=".news.newsList.ClassActivity" />
         <activity android:name=".settings.SettingActivity" />
         <activity android:name=".favorites.FavorActivity" />
         <activity android:name=".history.HistoryActivity" />
-        <activity android:name=".news.newsDetail.NewsDetailActivity"
+        <activity
+            android:name=".news.newsDetail.NewsDetailActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".news.newsList.NewsActivity"
             android:windowSoftInputMode="adjustPan"> <!-- 使得打字时窗口大小不变 -->
@@ -31,11 +38,7 @@
         <activity
             android:name=".main.MainActivity"
             android:windowSoftInputMode="adjustPan"> <!-- 使得打字时窗口大小不变 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
