--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".settings.SettingActivity" />
         <activity android:name=".favorites.FavorActivity" />
         <activity android:name=".history.HistoryActivity" />
+        <activity android:name=".search.SearchActivity" />
         <activity
             android:name=".news.newsDetail.NewsDetailActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
