--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,15 +12,26 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
     }
-    compileOptions {
+
+
+
+compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs "libs"
         }
     }
 }
@@ -37,6 +48,7 @@ MobSDK {
                 appSecret "b431be5fec741a6e536df3436e46481a"
                 callbackUri "http://www.sharesdk.cn"
             }
+
 //            QQ {
 //                appId "100371282"
 //                appKey "aed9b0303e3ed1e27bae87c33761161d"
@@ -104,4 +116,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+
+    implementation files('libs/Msc.jar')
+
+    implementation "org.permissionsdispatcher:permissionsdispatcher:4.5.0"
+    annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:4.5.0"
 }
