--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 
         maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter"}
         maven { url 'https://github.com/WickeDev/stetho-realm/raw/master/maven-repo' }
+        maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
 //        maven { url "https://jitpack.io" }
 
         google()
